# token-o-meter

./: .gitignore  LICENSE  README.md
backend/: .gitignore  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_runs_table.py  0002_add_run_trace_events.py  0003_add_human_evaluation.py  0004_add_run_is_demo.py  0005_add_metrics_tool_calls.py  0006_add_run_archived.py  0007_create_custom_scenarios.py  0008_add_custom_scenario_confidence_threshold.py  0009_add_run_scenario_family.py
backend/app/: main.py
backend/docs/: add-scenario-family.md
backend/scenarios/: account-locked-triage.yaml  customer-email-triage.yaml  diff-hardcoded-secret.yaml  diff-missing-test-coverage.yaml  diff-unsafe-sql-query.yaml  incident-deploy-regression.yaml  incident-memory-leak.yaml  incident-transient-spike.yaml  policy-accidental-damage-warranty.yaml  policy-cancel-after-shipping.yaml  policy-refund-window.yaml  screening-incomplete-resume.yaml  screening-missing-required-skill.yaml  screening-strong-match.yaml  shipping-delay-triage.yaml
backend/tests/: fakes.py  test_agent_runner.py  test_api.py  test_checkpoint_policy.py  test_config.py  test_demo_data.py  test_diff_review_runners.py  test_evaluation_judge.py  test_execution_rate_limit.py  test_hiring_screening_runners.py  test_human_checkpoint_runner.py  test_human_metrics.py  test_incident_triage_runners.py  test_llm_runner.py  test_logging.py  test_policy_runners.py  test_recommendation.py  test_run_store.py  test_tool_runner.py
(+108 files in other folders)
