[project]
name = "just-enough-ai-backend"
version = "0.1.0"
description = "Backend for Just enough AI — find the cheapest reliable abstraction for a task."
requires-python = ">=3.13"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
